# nomadcoin

./: .gitignore  BRANDING.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEMONSTRATE_WALLET_IMPORT.sh  DEPLOYMENT_READINESS_SUMMARY.md  LICENSE  LOCAL_TESTING_GUIDE.md  MAINNET_DEPLOYMENT.md  MAINNET_READINESS.md  MAINNET_READINESS_REPORT.md  P2P_AND_GUI_FIXES.md  PHASE2_BUILD_SUMMARY.md  PHASE2_DEPLOYMENT_STATUS.md  PHASE3_FINDINGS.md  PHASE3_SYNC_PLAN.md  PHASE4_PLAN.md  PI_DEPLOYMENT_INSTRUCTIONS.md  PI_PHASE2_STATUS.md  README.md  SESSION_SUMMARY.md  SIMPLE_TEST.md  START_LOCAL_TEST.sh  TESTING_COMPLETE_SUMMARY.md  TESTNET_DEPLOYMENT.md  TESTNET_DEPLOYMENT_INSTRUCTIONS.md  TESTNET_SETUP_GUIDE.md  TEST_RESULTS_AND_ISSUES.md  _config.yml  build.sh  check-pi-build.sh  config.mainnet.json  deploy_mainnet_local.sh  deploy_to_pi.sh  load-test-results.txt  nomadcoin  pi-deployment-setup.sh  pi-init-cluster.sh  (+1 more)
complete_wallet_releases/: INSTALL.sh  README.md  RELEASES_SUMMARY.md  VERSION.md
docs/: 01_executive_summary.md  02_technical_specification.md  03_development_guide.md  04_development_plan.md  05_ai_development_strategy.md  06_cost_estimation.md  07_whitepaper.md  08_build_and_run.md  09_mainnet_setup.md  README.md  index.html
mainnet/: config.mainnet.json
scripts/: build-app.sh  deploy-testnet-cluster.sh  deploy-testnet-node.sh  monitor-testnet.sh  verify-testnet-deployment.sh
src/: blockchain.rs  config.rs  consensus.rs  crypto.rs  gui.rs  load_test.rs  main.rs  mesh.rs  miner.rs  network.rs  storage.rs  types.rs  validator_persistence.rs  (+2 more)
(+45 files in other folders)
