[package]
name = "nomadcoin-core"
version = "0.1.0"
edition = "2021"
authors = ["NomadCoin Team <team@nomadcoin.network>"]
description = "A mobile-first cryptocurrency for the nomadic community"
license = "MIT"

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
rocksdb = "0.22"

# Networking
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.12"
bytes = "1.5"

# Utilities
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI - eframe for native desktop apps
eframe = { version = "0.29", optional = true }
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }

[build-dependencies]
prost-build = "0.12"

[[bin]]
name = "nomadcoin"
path = "src/main.rs"

[[bin]]
name = "nomadcoin-gui"
path = "src/gui.rs"
required-features = ["gui"]

[features]
default = []
gui = ["eframe", "qrcode", "image"]
